--- a/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
+++ b/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
@@ -20,10 +20,11 @@
       <button class="tablinks" id="ctb">Configuration</button>
     </div>
 
-    
+
 
     <div id="id-timer-table-div">
     </div>
+    <button id="zrlb" type="button">Reload</button>
 
 
         <div id="configdiv">
