--- a/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
+++ b/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
@@ -24,6 +24,9 @@
 
     <div id="id-timer-table-div">
     </div>
+    <label>PC<input type="checkbox" id="id-pressControlStatus"><br>
+    </label> <label>Pump<input type="checkbox" id="id-waterPumpStatus"></label><br>
+    </label> <label>Time <input type="text" id="id-stm32Time"></label><br>
     <button id="zrlb" type="button">Reload</button>
 
 
