rain-sensor, mqtt valve status, timer improvements

--- a/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
+++ b/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
@@ -24,9 +24,11 @@
 
     <div id="id-timer-table-div">
     </div>
-    <label>PC<input type="checkbox" id="id-pressControlStatus"><br>
-    </label> <label>Pump<input type="checkbox" id="id-waterPumpStatus"></label><br>
-    </label> <label>Time <input type="text" id="id-stm32Time"></label><br>
+    <label>PC<input type="checkbox" id="id-pressControlStatus"></label><br>
+    <label>Pump<input type="checkbox" id="id-waterPumpStatus"></label><br>
+    <label>Rain-Sensor<input type="checkbox" id="id-rainSensorStatus"></label><br>
+
+    <label>Time <input type="text" id="id-stm32Time"></label><br>
     <button id="zrlb" type="button">Reload</button>
 
 
