--- a/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
+++ b/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
@@ -31,9 +31,9 @@
     <label>Time <input type="text" id="id-stm32Time"></label><br>
     <button id="zrlb" type="button">Reload</button><br>
 
-    <h4>RV/NET Firmware</h4>
+    <h4>RV/NET Firmware Update</h4>
     <label>STM32 URL <input type="text" id="id-stm32FirmwareURL"> <button id="rvdl" type="button">Download</button><button id="rvfl" type="button">Do Flash</button></label><br>
-    <label>ESP32 URL <input type="text" id="id-esp32FirmwareURL"> <button id="netdl" type="button">Download</button><button id="netfl" type="button">Do Flash</button></label><br>
+    <label>ESP32 URL <input type="text" id="id-esp32FirmwareURL"> <button id="netota" type="button">Do Flash</button></label><br>
      
 
         <div id="configdiv">
