saving and editing zone names

--- a/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
+++ b/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
@@ -29,7 +29,9 @@
     <label>Rain-Sensor<input type="checkbox" id="id-rainSensorStatus"></label><br>
 
     <label>Time <input type="text" id="id-stm32Time"></label><br>
-    <button id="zrlb" type="button">Reload</button><br>
+    <button id="zrlb" type="button">Reload</button>
+    <button id="znsb" type="button">Save</button>
+    <br><br>
 
     <h4>RV/NET Firmware Update</h4>
     <label>STM32 URL <input type="text" id="id-stm32FirmwareURL"> <button id="rvdl" type="button">Download</button><button id="rvfl" type="button">Do Flash</button></label><br>
