rv-version. mcp getbits fixed. polling PC. ...

--- a/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
+++ b/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
@@ -34,7 +34,7 @@
     <br><br>
 
     <h4>RV/NET Firmware Update</h4>
-    <label>STM32 URL <input type="text" id="id-stm32FirmwareURL" value="http://192.168.1.70:8000/rv.bin"><button id="rvota" type="button">Do Flash</button></label><br>
+    <label>STM32 URL <input type="text" id="id-stm32FirmwareURL" value="http://192.168.1.70:8000/rv.bin"><button id="rvota" type="button">Do Flash</button><span id="id-rvFwUpdState"></span></label><br>
     <label>ESP32 URL <input type="text" id="id-esp32FirmwareURL" value="http://192.168.1.70:8000/netmcu.bin"> <button id="netota" type="button">Do Flash</button></label><br>
      
 
