html boot-count and version

--- a/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
+++ b/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
@@ -49,7 +49,11 @@
       <button id="crlb" type="button">Reload</button>
       <button id="csvb" type="button">Save</button>
       <br><br>
-    <button id="mrtb" type="button">Restart MCU</button><br>
+      <button id="mrtb" type="button">Restart MCU</button><br>
+      <ul>
+      <li><label>NetMCU-Boot-Count: <span id="id-bootCount"></span></label></li>
+      <li><label>RV-Version: <span id="id-stm32Version"></span></label></li>
+      </ul>
     </div>
   </body>
 </html>
