web: stm32 reset. reverse stm32 boot pin

--- a/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
+++ b/esp32/netmcu/main/userio/http_data/tfmcu_dev.html
@@ -171,6 +171,8 @@
       <button id="zrlb" type="button">Reload</button>
       <button id="znsb" type="button">Save</button>
       <br><br>
+      <button id="rvrstb" type="button">Restart MCU</button><br>
+
       <ul>
 	<li><label>RV-Version: <span id="id-stm32Version"></span></label></li>
       </ul>
